--- a/.github/workflows/Pipeline_Diogo_Silva.yml
+++ b/.github/workflows/Pipeline_Diogo_Silva.yml
@@ -7,85 +7,89 @@ on:
 
 jobs:
   static-analysis:
-    name: Static Code Analysis
+    name: Análise Estática
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout do Código
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Configurar Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
+          pip install pylint flake8
 
-      - name: Run Pylint
+      - name: Executar Pylint
         run: |
-          pylint $(git ls-files '*.py') > pylint-report.txt || true
+          pylint $(git ls-files '*.py') | tee pylint-report.txt || true
 
-      - name: Upload Pylint Report
+      - name: Executar Flake8
+        run: |
+          flake8 --statistics --count --exit-zero . | tee flake8-report.txt || true
+
+      - name: Verificar métricas e definir status
+        run: |
+          ERROS=$(flake8 --count .)
+          if [ "$ERROS" -gt 50 ]; then
+            echo "Erro crítico: Código tem demasiadas falhas! 🚨"
+            exit 1
+          elif [ "$ERROS" -gt 10 ]; then
+            echo "Aviso: Código tem algumas falhas. ⚠️"
+            exit 0
+          else
+            echo "Sucesso: Código limpo! ✅"
+            exit 0
+          fi
+
+      - name: Guardar Relatórios de Análise Estática
         uses: actions/upload-artifact@v4
         with:
-          name: pylint-report
-          path: pylint-report.txt
+          name: static-analysis-reports
+          path: |
+            pylint-report.txt
+            flake8-report.txt
 
-  secret-detection:
-    name: Secret Detection
+  dynamic-analysis:
+    name: Análise Dinâmica
     runs-on: ubuntu-latest
     needs: static-analysis
 
     steps:
-      - name: Checkout code
+      - name: Checkout do Código
         uses: actions/checkout@v4
 
-      - name: Install TruffleHog
-        run: |
-          pip install trufflehog
-
-      - name: Run TruffleHog
-        run: |
-          trufflehog filesystem . > trufflehog-report.txt || true
-
-      - name: Upload TruffleHog Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: trufflehog-report
-          path: trufflehog-report.txt
-
-  dynamic-analysis:
-    name: Dynamic Code Analysis
-    runs-on: ubuntu-latest
-    needs: secret-detection
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
+      - name: Configurar Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
-      - name: Install dependencies
+      - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
           pip install pytest
 
-      - name: Run Tests
+      - name: Executar Testes
         run: |
-          pytest > test-report.txt
+          pytest --maxfail=5 --disable-warnings | tee test-report.txt || true
 
-      - name: Upload Test Report
+      - name: Analisar Resultados dos Testes
+        run: |
+          FALHAS=$(grep -o "FAILED" test-report.txt | wc -l)
+          if [ "$FALHAS" -gt 0 ]; then
+            echo "Erro: Alguns testes falharam! 🚨"
+            exit 1
+          else
+            echo "Todos os testes passaram! ✅"
+            exit 0
+          fi
+
+      - name: Guardar Relatório de Testes
         uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: test-report.txt
-
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
