--- a/.github/workflows/Pipeline_Diogo_Silva.yml
+++ b/.github/workflows/Pipeline_Diogo_Silva.yml
@@ -1,3 +1,10 @@
+name: CI Pipeline
+
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
+
 jobs:
   static-analysis:
     name: Análise Estática
@@ -47,7 +54,6 @@ jobs:
           path: |
             pylint-report.txt
             flake8-report.txt
-
 
   dynamic-analysis:
     name: Análise Dinâmica
